cv version 2 correct typo

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <title>Contact me</title>
   </head>
   <body>
-    <h1>phnne:18809231825</h1>
+    <h1>phone:18809231825</h1>
 
   </body>
 </html>
