--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <meta charset="utf-8">
   <title>
     &#128154;Jane's Personal Site</title>
+  <style media="screen">
+    body{
+      background-color: #E8F9FD
+    }
+    hr{
+      background-color: white;
+      border-style: none;
+    }
+  </style>
 </head>
 
 <body>
@@ -17,7 +26,7 @@
   <h3>Education</h3>
   <ul>
     <li>Imperial College</li>
-    <li><a href="https://www.osu.edu">ohio state university</a></li>
+    <li><a href="https://www.osu.edu">Ohio state university</a></li>
   </ul>
   <hr size=3>
   <h3>Skills</h3>
